# rust-basics

./: Cargo.toml  data.txt
src/: append.rs  main.rs  mem_address.rs  mutable_ref.rs  structs.rs
