[package]
name = "project2"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name= "mutable"
path= "src/mutable_ref.rs"

[[bin]]
name="references"
path="src/ref.rs"

[[bin]]
name="memory"
path="src/mem_address.rs"

[[bin]]
name="struct"
path="src/structs.rs"


[[bin]]
name="append"
path="src/append.rs"